Complete UI Work

--- a/IdentityManagementWebService/css/simple-sidebar.css
+++ b/IdentityManagementWebService/css/simple-sidebar.css
@@ -15,6 +15,7 @@ body {
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
     background: #1565c0;
+    height: auto;
 }
 
 #wrapper.toggled {
