--- a/IdentityManagementWebService/css/style.css
+++ b/IdentityManagementWebService/css/style.css
@@ -1729,7 +1729,13 @@ h4.content-box-header {
 
 .mailbox-content {
     background: #fff;
-    padding: 2em;
+    min-height: 250px;
+    padding: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    width:100%
 }
 
 .widget-footer.clearfix {
