--- a/IdentityManagementWebService/css/identitiesstyle.css
+++ b/IdentityManagementWebService/css/identitiesstyle.css
@@ -43,6 +43,7 @@
             width: 250px;
             border: 1px solid #ddd;
             text-align: left;
+            padding-top: 5px;
         }
 
         .tablerow {
@@ -51,7 +52,13 @@
 
         .tablecol {
             font-weight: Bold;
-            width: 23%;
+            width: 10%;
+            border: 1px solid #ddd;
+            text-align: center;
+        }
+        .tablecolu {
+            font-weight: Bold;
+            width: 5%;
             border: 1px solid #ddd;
             text-align: left;
         }
@@ -59,3 +66,45 @@
         .active {
             background-color: lightgray;
         }
+        .tooltip {
+    position: relative;
+    display: inline-block;
+}
+.tooltiptext {
+    visibility: visible;
+    width: 140px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 150%;
+    left: 50%;
+    margin-left: -75px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
+input::-webkit-datetime-edit-year-field:not([aria-valuenow]),
+::-webkit-datetime-edit-month-field:not([aria-valuenow]),
+::-webkit-datetime-edit-day-field:not([aria-valuenow]) {
+    color: transparent;
+}
