--- a/IdentityManagementWebService/css/addidentitystyle.css
+++ b/IdentityManagementWebService/css/addidentitystyle.css
@@ -1,8 +1,8 @@
-﻿        .Background {
-            background-color: Black;
-            filter: alpha(opacity=90);
-            opacity: 0.8;
-        }
+﻿.Background {
+    background-color: Black;
+    filter: alpha(opacity=90);
+    opacity: 0.8;
+}
 
 .lbl {
     font-size: 16px;
@@ -31,22 +31,21 @@ table {
     margin-top: 5px;
 }
 
-        .mainheading {
-            color: white;
-            float: left;
-            height: 50px;
-            padding: 15px 15px;
-            font-size: 30px;
-            line-height: 50px;
-        }
+.mainheading {
+    color: white;
+    float: left;
+    height: 50px;
+    padding: 15px 15px;
+    font-size: 30px;
+    line-height: 50px;
+}
 
-        .active {
-            background-color: lightgray;
-        }
+.active {
+    background-color: lightgray;
+}
 
 .input-group .form-control {
     position: relative;
-    z-index: 2;
     margin-bottom: 0;
     border: 1px solid black;
     width: 120px;
@@ -73,36 +72,36 @@ td, th {
             border-right: none;
         }*/
 
-        .labelText {
-            font-weight: bold;
-        }
+.labelText {
+    font-weight: bold;
+}
 
-        .newwebsite {
-            width: 200px;
-            height: 23px;
-            font-size: small;
-            margin-left: 3px;
-        }
+.newwebsite {
+    width: 200px;
+    height: 23px;
+    font-size: small;
+    margin-left: 3px;
+}
 
-        .btn-click {
-            color: #fff;
-            background-color: #1565c0;
-            border-color: #1565c0;
-            padding: 8.5px 12px;
-            width: 80px;
-        }
+.btn-click {
+    color: #fff;
+    background-color: #1565c0;
+    border-color: #1565c0;
+    padding: 8.5px 12px;
+    width: 80px;
+}
 
-        .addvalue input:focus {
-            outline: none;
-        }
+.addvalue input:focus {
+    outline: none;
+}
 
-        .error {
-            color: #e74c3c;
-        }
+.error {
+    color: #e74c3c;
+}
 
-        select {
-            height: auto !important;
-        }
+select {
+    height: auto !important;
+}
 
 body {
     font-size: 17px !important;
@@ -124,9 +123,82 @@ body {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 .box-body {
+    overflow:auto!important;
+    height: 600px!important;
+    margin-left: 25%;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     border-bottom-right-radius: 3px;
     border-bottom-left-radius: 3px;
     padding: 10px;
+}
+body {font-family: Arial, Helvetica, sans-serif;}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 3000; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 40%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    background-color: #1565c0;
+    color: white;
+}
+
+.modal-body {padding: 2px 16px;}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: white;
+    color: white;
 }
