--- a/IdentityManagementWebService/css/addidentitystyle.css
+++ b/IdentityManagementWebService/css/addidentitystyle.css
@@ -122,6 +122,15 @@ body {
     width: 100%;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
+.boxbody
+{
+    margin-left: 10%;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    padding: 10px;
+}
 .box-body {
     overflow:auto!important;
     height: 600px!important;
