--- a/IdentityManagementWebService/css/style.css
+++ b/IdentityManagementWebService/css/style.css
@@ -21,7 +21,8 @@ html, body {
     font-family: 'Roboto', sans-serif;
     font-size: 17px;
     background: #f2f4f8;
-    overflow-x: hidden;
+    overflow-y:auto;
+    overflow-x:auto;
 
 }
 
@@ -718,8 +719,9 @@ h4.pull-left {
 }
 
     .copy p, .copy_layout p {
-        font-size: 0.85em;
+        font-size: 1em;
         color: #555;
+        padding: 0.5em;
     }
 
         .copy p a, .copy_layout p a {
@@ -1019,7 +1021,6 @@ i.dollar1 {
 }
 /*-- graphs --*/
 .graphs {
-    padding-bottom: 2em 1em;
     background: #f2f4f8;
     font-family: 'Roboto', sans-serif;
 }
@@ -1994,13 +1995,10 @@ blockquote {
     background: #e5ebee;
     text-align: center;
     position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1rem;
   background-color: #efefef;
-  text-align: center;
-}
+      margin-left: 40%;
+      margin-top:7%;
+
 }
 
 .login {
