--- a/IdentityManagementWebService/css/addidentitystyle.css
+++ b/IdentityManagementWebService/css/addidentitystyle.css
@@ -56,7 +56,7 @@ td, th {
     border-spacing: 1px;
     border-left: 1px solid lightgray;
     border-right: 1px solid lightgray;
-    padding: 0px 10px 1px 10px;
+    padding: 0px 10px 1px 10px !important;
 }
 @media only screen and (max-width: 600px) {
    table, thead, tbody, th, td, tr { 
